--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
 
         <ul class="navbar-nav ms-auto d-flex flex-row">
           <li class="nav-item me-3 me-lg-0">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="https://github.com/HelderMenegatti/GeoStatDashboard">
               <i class="fab fa-github"></i>
             </a>
           </li>
@@ -57,12 +57,6 @@
                 height="22" alt="Avatar" loading="lazy" />
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-              <li>
-                <a class="dropdown-item" href="#">My profile</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Settings</a>
-              </li>
               <li>
                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
               </li>
