--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -33,6 +33,8 @@
             </div>
         
             <canvas id="myChart"></canvas>
+
+            <p>*Clique em um estado para abrir tabela de municipios.</p>
         </div>
     </div>
 
