--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
 
         <ul class="navbar-nav ms-auto d-flex flex-row">
           <li class="nav-item me-3 me-lg-0">
-            <a class="nav-link" href="https://github.com/HelderMenegatti/GeoStatDashboard">
+            <a class="nav-link" href="https://github.com/HelderMenegatti/GeoStatDashboard" target="_blank">
               <i class="fab fa-github"></i>
             </a>
           </li>
