--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,8 +1,7 @@
 {% extends 'base-account.html' %}
+{% load static %}
 
 {% block title %}Login {% endblock %}
-
-{% block card_title %}Login{% endblock %}
 
 {% block content %}
 {% load django_bootstrap5 %}
@@ -22,15 +21,5 @@
 {% endblock %}
 
 {% block js %}
-    <script>
-        function fetchToken() {
-            const username = document.getElementById('id_username').value;
-            const password = document.getElementById('id_password').value;
-            localStorage.setItem('userName', username);
-            localStorage.setItem('password', password);
-        }
-
-        document.getElementById('submit-form').addEventListener('click', fetchToken);
-    </script>
-    
+    <script src="{% static 'js/accounts/login.js' %}"></script>    
 {% endblock %}
