--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Document{% endblock %}</title>
+    <link rel="icon" href="{% static 'img/icons/periscope.png' %}" type="image/x-icon">
     
     <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -67,7 +68,7 @@
     </nav>
   </header>
 
-  <main class="margin-top1" style="margin-top: 100px;">
+  <main class="margin-top">
     <div class="container pt-4">
       
       {% block content %}
