adding uf field to the serialize and inserting uf column in the counties table.

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -54,6 +54,7 @@
                                 <thead>
                                     <tr>
                                         <th scope="col">Municípios</th>
+                                        <th scope="col">UF</th>
                                     </tr>
                                 </thead>
                                 <tbody id="counties-table-body">
@@ -68,7 +69,6 @@
                                 </ul>
                             </nav>
                         </div>
-
                     </div>
                 </div>
             </div>
