Hotfix color obs text

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -34,7 +34,7 @@
         
             <canvas id="myChart"></canvas>
 
-            <p>*Clique em um estado para abrir tabela de municipios.</p>
+            <p class="obs-text-color">*Clique em um estado para abrir tabela de municipios.</p>
         </div>
     </div>
 
