--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
-        <a href="#" class="list-group-item list-group-item-action py-2 ripple active menu-bar-button">
+        <a href="{% url 'dashboard' %}" class="list-group-item list-group-item-action py-2 ripple active menu-bar-button">
           <i class="fas fa-chart-area fa-fw me-3"></i><span>Dashboard</span>
         </a>
       </div>
@@ -37,7 +37,7 @@
         <i class="fas fa-bars"></i>
       </button>
 
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{% url 'dashboard' %}">
         <img src="{% static 'img/icons/periscope.png' %}" height="25" alt="Logo"
         loading="lazy" />
 
