--- a/templates/base-account.html
+++ b/templates/base-account.html
@@ -32,7 +32,7 @@
                             </div>
                         </a>
                         <div class="col-12 d-flex justify-content-center align-items-center">
-                            <h5 class="card-title">GeoStartDashboard</h5>
+                            <h5 class="card-title">GeoStatDashboard</h5>
                         </div>
                         <div class="col-12 mt-5">
                             {% block content %}
