--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <img src="{% static 'img/icons/periscope.png' %}" height="25" alt="Logo"
         loading="lazy" />
 
-        <p>GeoStartDashboard</p>
+        <p>GeoStatDashboard</p>
       </a>
 
       <ul class="navbar-nav ms-auto d-flex flex-row">
